[metadata]
name = tfds-kaggle-chest-xray-images-dimitrymindlin
version = 0.0.1
author = Dimitry Mindlin
author_email = dmindlin@techfak.uni-bielefeld.de
description = Kaggle Chest X-ray dataset for tfds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimitrymindlin/tfds-kaggle-chest-xray-images
project_urls =
    Bug Tracker = https://github.com/dimitrymindlin/tfds-kaggle-chest-xray-images/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = src